--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,14 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- WireMock for mocking HTTP services -->
+		<dependency>
+			<groupId>com.github.tomakehurst</groupId>
+			<artifactId>wiremock-jre8</artifactId>
+			<version>2.31.0</version>
+			<scope>test</scope>
+		</dependency>
+
 
 	</dependencies>
 
